# HonorsProject_CSC211H_Fall2024

./: CMakeLists.txt  README.md
include/auth/: loginwindow.h  registerwindow.h
include/database/: database.h
include/models/: application.h  job.h  user.h
include/ui/: jobdetailwidget.h  joblistwidget.h  mainwindow.h  profilewidget.h  searchfilterwidget.h
src/: main.cpp
src/auth/: loginwindow.cpp  registerwindow.cpp
src/database/: database.cpp
src/models/: application.cpp  job.cpp  user.cpp
src/ui/: jobdetailwidget.cpp  joblistwidget.cpp  mainwindow.cpp  profilewidget.cpp  searchfilterwidget.cpp
